--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,62 @@
+@import url('//fonts.googleapis.com/css?family=Allura');
+
 body {
-    background: rebeccapurple;
+    background: #009AB4;
     color: black;
+    font-size: 2vw;
+    height: 100vh;
 }
+
+.app {
+    margin-top: 0;
+}
+
+.list {
+    max-width: 20vw;
+    min-width: 250px;
+    background-color: #E2E4E6;
+    margin: 2vh 2vw;
+    border-radius: 2%;
+}
+
+.header-div {
+    background-color: #00AECC;
+    margin-bottom: 2vh;
+}
+
+.header {
+    color: white;
+    font-weight: bolder;
+    font-size: 5vh;
+    text-align: center;
+    font-family: 'Allura', Arial, Helvetica, sans-serif;
+}
+.cards {
+    color: white;
+}
+
+.cardBox { 
+    border: 1px solid grey;
+    background: white;
+    color: black;
+    margin-bottom: 10px;
+    padding: 1vh 1vw;
+    border-radius: 2%;
+    font-size: 2vw;
+    display: flex; 
+    justify-content:space-between;
+}
+
+.cardBox button {
+    align-self: flex-start;
+}
+
+.card-submit {
+    width: 10vw;
+}
+
+.list-submit {
+    width: 10vw;
+}
+
+
